# GRBafterglowfit

./: README.md  pyproject.toml
docs/: forward_shock_model.md  reverse_shock_model.md
example/GRB220101A/: config.yaml  xrt.txt
examples/GRB220101A/: grbmeas.csv  otherdata.txt
examples/model_regime_gallery/: plot_regime_gallery.py
src/: fit.py  models.py
src/grbfit/: artifacts.py  config_template.yaml  data.py  detectability.py  fit.py  models.py  run.py
tests/: test_model_slopes.py  test_models.py  test_regime_gallery_example.py  test_reverse_shock_config.py
